<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.islamlife.andy_dev.muslim_life.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_heading"
        android:textSize="32sp"
        android:textColor="@color/colorHeading"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView" />

    <TextView
        android:text="dd-mmm-yyyy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/night_prayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_alignLeft="@+id/textView12"
        android:layout_alignStart="@+id/textView12" />

    <TextView
        android:text="@string/late_evening_prayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="35dp"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/textView11"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:text="@string/early_evening_prayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="44dp"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <TextView
        android:text="@string/noon_prayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="45dp"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:text="@string/morning_prayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/textView_time"
        android:layout_toLeftOf="@+id/textView"
        android:layout_toStartOf="@+id/textView" />

    <TextView
        android:text="@string/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:textSize="20sp"
        android:layout_below="@+id/textView_time"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginTop="22dp" />

    <TextView
        android:background="?attr/editTextBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5:00pm"
        android:id="@+id/textView_time"
        android:enabled="true"
        android:inputType="none"
        android:layout_below="@+id/textView2"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginTop="34dp" />

    <TextView
        android:background="?attr/editTextBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5:00pm"
        android:id="@+id/textView5"
        android:enabled="true"
        android:inputType="none"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:background="?attr/editTextBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5:00pm"
        android:id="@+id/textView6"
        android:enabled="true"
        android:inputType="none"
        android:layout_above="@+id/textView12"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:background="?attr/editTextBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5:00pm"
        android:id="@+id/textView4"
        android:enabled="true"
        android:inputType="none"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignLeft="@+id/textView_time"
        android:layout_alignStart="@+id/textView_time" />

    <TextView
        android:background="?attr/editTextBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5:00pm"
        android:id="@+id/textView3"
        android:enabled="true"
        android:inputType="none"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:background="?attr/editTextBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5:00pm"
        android:id="@+id/textView7"
        android:enabled="true"
        android:inputType="none"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
